syntax = "proto3";

message DbTrieNode {
  bytes key = 1;
  repeated uint32 childChars = 2;
}

